[#2943] Fixed spill over

--- a/akvo/rsr/static/styles-src/main.scss
+++ b/akvo/rsr/static/styles-src/main.scss
@@ -4719,6 +4719,7 @@ main.results-page {
 
                                     .row {
                                         .UpdateBody {
+                                            width: calc(100% - 20px);
                                             .update-photo, .update-attachment {
                                                 padding: 0 40px;
                                                 width: calc(100% - 20px);
